--- a/build-logic/gradm/gradm.yml
+++ b/build-logic/gradm/gradm.yml
@@ -2,6 +2,8 @@ versions:
   consensus: "0.5.0"
   gradle: "8.4"
   kotlin: "1.9.20"
+  kotlinx:
+    serialization: "1.6.0"
   plugins:
     gradle.enterprise: "3.15.1"
     spotless: "6.22.0"
@@ -15,7 +17,8 @@ plugins:
   gradlePluginPortal:
     com.diffplug.spotless: ${versions.plugins.spotless}
     com.gradle.enterprise: ${versions.plugins.gradle.enterprise}
-    org.jetbrains.kotlin.jvm: ${versions.kotlin}
+    org.jetbrains.kotlin.multiplatform: ${versions.kotlin}
+    org.jetbrains.kotlin.plugin.serialization: ${versions.kotlin}
   omico:
     me.omico.consensus.api: ${versions.consensus}
     me.omico.consensus.git: ${versions.consensus}
@@ -23,6 +26,11 @@ plugins:
     me.omico.consensus.spotless: ${versions.consensus}
 
 dependencies:
+  mavenCentral:
+    org.jetbrains.kotlinx:
+      kotlinx-serialization-json:
+        alias: kotlinx.serialization.json
+        version: ${versions.kotlinx.serialization}
   omico:
     me.omico.consensus:
       consensus-dsl:
